--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
-    <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrap">
-      {{ content }}
+  <body>
+    <div class="wrapper">
+      <div class="box">
+        <div class="row">
+          {% include sidebar.html %}
+          <div class="column col-sm-9 col-md-9 col-lg-10" id="main">
+            <div class="padding">
+              {{ content }}
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    {% include footer.html %}
-
-    </body>
+    {% include scripts.html %}
+  </body>
 </html>
