Fix generate.sh script and css

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="col-sm-12">
-  <div class="col-sm-12 panel panel-default" id="featured">
+  <div class="panel panel-default" id="featured">
     <div class="panel-body">
       {% if page.categories %}
         <h4>{{ page.categories }}</h4>
