--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,9 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="{{ site.description }}">
+  <link rel="alternate" type="application/atom+xml" title="Tim Videos Planet Feed" href="{{ "/feed.xml" | prepend: site.baseurl | preped: site.url }}" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
-  <!-- Custom CSS -->
-  <link xx="{{ site.baseurl }}" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <link href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}" rel="stylesheet">
   <link href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}" rel="stylesheet">
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
