--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,5 +1,5 @@
 {% for category in site.categories %}
-<div class="col-sm-12 col-md-6">
+<div class="col-md-12 col-lg-6">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4>News from developers <span class="pull-right">{{ category | first | upcase }}</span></h4>
