Add social buttons

--- a/_layouts/post-iframe.html
+++ b/_layouts/post-iframe.html
@@ -24,6 +24,7 @@ layout: default-iframe
             {% endfor %}
           </p>
         {% endif %}
+        {% include social-buttons.html %}
         <p class="article">
           {{ content }}
         </p>
