--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 col-lg-6">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4><span class="hidden-xs">{{ page.caption }}</span> <span class="pull-right">GSoC 2014 - HDMI2USB</span></h4>
+      <h4><span class="hidden-xs">{{ page.caption }}</span> <span class="pull-right"><a href="{{ page.subdir }}{% category_url gsoc-2014-hdmi2usb %}/feed.xml"><i class="fa fa-rss"></i></a> <a href="{{ page.subdir }}{% category_url gsoc-2014-hdmi2usb %}/feed.opml"><i class="fa fa-dot-circle-o"></i></a> <a href="{{ page.subdir }}{% category_url gsoc-2014-hdmi2usb %}">GSoC 2014 - HDMI2USB</a></span></h4>
     </div>
     <div class="panel-body">
       {% for post in site.categories['gsoc-2014-hdmi2usb'] %}
@@ -34,7 +34,7 @@
 <div class="col-md-12 col-lg-6">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4><span class="hidden-xs">{{ page.caption }}</span> <span class="pull-right">GSoC 2014</span></h4>
+      <h4><span class="hidden-xs">{{ page.caption }}</span> <span class="pull-right"><a href="{{ page.subdir }}{% category_url gsoc-2014-hdmi2usb %}/feed.xml"><i class="fa fa-rss"></i></a> <a href="{{ page.subdir }}{% category_url gsoc-2014-hdmi2usb %}/feed.opml"><i class="fa fa-dot-circle-o"></i></a> <a href="{{ page.subdir }}{% category_url gsoc-2014 %}">GSoC 2014</a></span></h4>
     </div>
     <div class="panel-body">
       {% for post in site.categories['gsoc-2014'] %}
