--- a/_layouts/post-iframe.html
+++ b/_layouts/post-iframe.html
@@ -1,34 +1,4 @@
 ---
 layout: default-iframe
 ---
-<div class="col-sm-12">
-  <div class="panel panel-default" id="featured">
-    <div class="panel-body">
-      {% if page.categories %}
-        <h4>{{ page.categories }}</h4>
-      {% endif %}
-      <h1>{{ page.title }}</h1>
-      <div class="article">
-        <p class="meta description">
-          {{ page.date | date: "%b %-d, %Y" }}
-          {% if page.author %} • {{ page.author }}{% endif %}
-          {% if page.meta %} • {{ page.meta }}{% endif %}
-        </p>
-        {% if page.tags %}
-          <p class="tags">
-            <span>Tags: </span>
-            {% for tag in page.tags %}
-              <span class="label label-tag">
-                {{ tag }}
-              </span>
-            {% endfor %}
-          </p>
-        {% endif %}
-        {% include social-buttons.html %}
-        <p class="article">
-          {{ content }}
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
+{% include post.html %}
