--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,10 @@ padding-bottom: 0;
 }
 
 @media (max-width: 768px) {
+  .column .padding {
+    padding: 20px 0;
+  }
+
   #sidebar {
     padding-bottom: 20px;
   }
