--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,9 @@
     <li class="{% active_class news %}">
       <a href="{% page_url index %}">NEWS</a>
     </li>
+    <li class="{% active_class people %}">
+      <a href="{% page_url people %}">PEOPLE</a>
+    </li>
     <li class="{% active_class github %}">
       <a href="{% page_url github %}">GITHUB ACTIVITIES</a>
     </li>
