Add sidebar link to statistics

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,9 @@
     <li class="{% active_class github %}">
       <a href="{% page_url github %}">GITHUB ACTIVITIES</a>
     </li>
+    <li class="{% active_class stats %}">
+      <a href="{% page_url stats %}">GITHUB STATISTICS</a>
+    </li>
   </ul>
   <ul class="nav hidden-xs" id="sidebar-footer">
     <li class="social">
