Add two new charts: Code Frequency and Commit activity

--- a/_includes/project-charts.html
+++ b/_includes/project-charts.html
@@ -8,6 +8,8 @@
     <div class="panel-body">
       <div class="row">
       <div class="pie-chart"></div>
+      <div class="commit-activity"></div>
+      <div class="code-frequency"></div>
       </div>
     </div>
   </div>
