Add new charts (commits per weekday and commits per hour)

--- a/_includes/project-charts.html
+++ b/_includes/project-charts.html
@@ -10,6 +10,8 @@
       <div class="pie-chart"></div>
       <div class="commit-activity"></div>
       <div class="code-frequency"></div>
+      <div class="commits-per-weekday"></div>
+      <div class="commits-per-hour"></div>
       </div>
     </div>
   </div>
