Add Issues page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,9 @@
     <li class="{% active_class people %}">
       <a href="{% page_url people %}">PEOPLE</a>
     </li>
+    <li class="{% active_class issues %}">
+      <a href="{% page_url issues %}">ISSUES</a>
+    </li>
     <li class="{% active_class github %}">
       <a href="{% page_url github %}">GITHUB ACTIVITIES</a>
     </li>
