--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -4,15 +4,60 @@
       <h4>Issues filter</h4>
     </div>
     <div class="panel-body">
-      {% if page.issues_labels %}
-        Labels: <p class="tags">
-          {% for label in page.issues_labels %}
-            <span class="label label-tag label-selector" style="background-color: #{{ label.color }};">
-              {{ label.name }}
-            </span>
-          {% endfor %}
-        </p>
-      {% endif %}
+      <form class="form-horizontal" role="form">
+        <div class="form-group">
+          <label for="inputTitle" class="col-sm-2 control-label">Title</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputTitle" placeholder="Title" name="title">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputBody" class="col-sm-2 control-label">Body</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputBody" placeholder="Body" name="body">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputAuthor" class="col-sm-2 control-label">Author</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputAuthor" placeholder="Author" name="author">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputAssignee" class="col-sm-2 control-label">Assignee</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputAssignee" placeholder="Assignee" name="assignee">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" name="assigneed"> assigneed
+              </label>
+            </div>
+          </div>
+        </div>
+        {% if page.issues_labels %}
+          <div class="form-group">
+            <label for="inputLabels" class="col-sm-2 control-label">Labels</label>
+            <div class="col-sm-10">
+              <p class="labels">
+                {% for label in page.issues_labels %}
+                  <span class="label label-tag label-selector" style="background-color: #{{ label.color }};">
+                    {{ label.name }}
+                  </span>
+                {% endfor %}
+              </p>
+            </div>
+          </div>
+        {% endif %}
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Search!</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
