--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -5,10 +5,10 @@
     </div>
     <div class="panel-body">
       <form class="form-horizontal" role="form">
-        <div class="form-group">
+        <div class="form-group issues-title">
           <label for="inputTitle" class="col-sm-2 control-label">Title</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTitle" placeholder="Title" name="title">
+            <input type="text" class="form-control typeahead" id="inputTitle" placeholder="Title" name="title">
           </div>
         </div>
         <div class="form-group">
@@ -17,16 +17,16 @@
             <input type="text" class="form-control" id="inputBody" placeholder="Body" name="body">
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group issues-author">
           <label for="inputAuthor" class="col-sm-2 control-label">Author</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputAuthor" placeholder="Author" name="author">
+            <input type="text" class="form-control typeahead" id="inputAuthor" placeholder="Author" name="author">
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group issues-assignee">
           <label for="inputAssignee" class="col-sm-2 control-label">Assignee</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputAssignee" placeholder="Assignee" name="assignee">
+            <input type="text" class="form-control typeahead" id="inputAssignee" placeholder="Assignee" name="assignee">
           </div>
         </div>
         <div class="form-group">
