--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -42,13 +42,13 @@
           <div class="form-group">
             <label for="inputLabels" class="col-sm-2 control-label">Labels</label>
             <div class="col-sm-10">
-              <p class="labels">
+              <div class="labels">
                 {% for label in page.issues_labels %}
                   <span class="label label-tag label-selector" style="background-color: #{{ label.color }};">
                     {{ label.name }}
                   </span>
                 {% endfor %}
-              </p>
+              </div>
             </div>
           </div>
         {% endif %}
@@ -77,13 +77,13 @@
               </h5>
               <div class="issue">
                 {% if issue.labels %}
-                  <p class="tags">
+                  <div class="tags">
                     {% for label in issue.labels %}
                       <span class="label label-tag" style="background-color: #{{ label.color }};">
                         {{ label.name }}
                       </span>
                     {% endfor %}
-                  </p>
+                  </div>
                 {% endif %}
                 <div class="issue-content">
                   {{ issue.body | markdownify }}
