--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -4,7 +4,7 @@
       <h4>Issues filter</h4>
     </div>
     <div class="panel-body">
-      <form class="form-horizontal" role="form">
+      <form class="form-horizontal issues-filter" role="form">
         <div class="form-group issues-title">
           <label for="inputTitle" class="col-sm-2 control-label">Title</label>
           <div class="col-sm-10">
@@ -30,11 +30,10 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
+          <label class="col-sm-2 control-label">Assigneed?</label>
+          <div class="col-sm-10">
             <div class="checkbox">
-              <label>
-                <input type="checkbox" name="assigneed"> assigneed
-              </label>
+              <input type="checkbox" id="inputAssigneedYes" name="assigneedYes"> <label for="inputAssigneedYes"><span class="glyphicon glyphicon-ok"></span></label>
             </div>
           </div>
         </div>
@@ -54,7 +53,8 @@
         {% endif %}
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Search!</button>
+            <button class="btn btn-default issues-search">Search!</button>
+            <button class="btn btn-default issues-reset">Reset</button>
           </div>
         </div>
       </form>
@@ -73,9 +73,9 @@
           <div class="row issues">
             <div class="col-sm-10">
               <h5>
-                <a href="{{ issue.url }}">{{ issue.title }}</a>
+                <a href="{{ issue.url }}" class="issue-title">{{ issue.title }}</a>
               </h5>
-              <div class="issue">
+              <div class="issue" data-author="{{ issue.user_login }}" data-assignee="{{ issue.assignee_login }}">
                 {% if issue.labels %}
                   <div class="tags">
                     {% for label in issue.labels %}
@@ -85,17 +85,17 @@
                     {% endfor %}
                   </div>
                 {% endif %}
-                <div class="issue-content">
+                <div class="issue-content issue-body">
                   {{ issue.body | markdownify }}
                 </div>
                 <button type="button" data-toggle="tooltip" data-original-title="read in {{ issue.body | reading_time }}" class="show-more btn btn-default btn-xs pull-right" >Read more...</button>
                 <button type="button" class="hide-more btn btn-default btn-xs pull-right" >Hide issue...</button>
               </div>
               <small class="description">
-              #{{ issue.number }} • {{ issue.state }} • {{ issue.date | date: "%b %-d, %Y" }} • {{ issue.user_login }}
-              {% if issue.assignee_login %}
-               • Assignee: <a href="{{ issue.assignee_url }}">{{ issue.assignee_login }}</a>
-              {% endif %}
+                #{{ issue.number }} • {{ issue.state }} • {{ issue.date | date: "%b %-d, %Y" }} • {{ issue.user_login }}
+                {% if issue.assignee_login %}
+                 • Assignee: <a href="{{ issue.assignee_url }}">{{ issue.assignee_login }}</a>
+                {% endif %}
               </small>
             </div>
             <div class="col-sm-2">
