--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/jquery.fancybox.pack.js?v=2.1.5" | site.baseurl }}"></script>
+<script src="{{ "/js/plugins/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/plugins/jquery.fancybox.pack.js?v=2.1.5" | site.baseurl }}"></script>
 <script src="{{ "/js/planet.js" | prepend: site.baseurl }}"></script>
