--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -23,34 +23,56 @@
             <input type="text" class="form-control typeahead" id="inputAuthor" placeholder="Author" name="author">
           </div>
         </div>
-        <div class="form-group issues-assignee">
-          <label for="inputAssignee" class="col-sm-2 control-label">Assignee</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control typeahead" id="inputAssignee" placeholder="Assignee" name="assignee">
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default issues-advanced">Advanced search</button>
           </div>
         </div>
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Assigneed?</label>
-          <div class="col-sm-10">
-            <div class="checkbox">
-              <input type="checkbox" id="inputAssigneedYes" name="assigneedYes"> <label for="inputAssigneedYes"><span class="glyphicon glyphicon-ok"></span></label>
+        <div class="issues-advanced-search">
+          <div class="form-group issues-assignee">
+            <label for="inputAssignee" class="col-sm-2 control-label">Assignee</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control typeahead" id="inputAssignee" placeholder="Assignee" name="assignee">
             </div>
           </div>
-        </div>
-        {% if page.issues_labels %}
           <div class="form-group">
-            <label for="inputLabels" class="col-sm-2 control-label">Labels</label>
+            <label class="col-sm-2 control-label">Assigneed?</label>
             <div class="col-sm-10">
-              <div class="labels">
-                {% for label in page.issues_labels %}
-                  <span class="label label-tag label-selector" style="background-color: #{{ label.color }};">
-                    {{ label.name }}
-                  </span>
-                {% endfor %}
+              <div class="checkbox">
+                <input type="checkbox" id="inputAssigneedYes" name="assigneedYes"> <label for="inputAssigneedYes"><span class="glyphicon glyphicon-ok"></span></label>
+              </div>
+              <div class="checkbox">
+                <input type="checkbox" id="inputAssigneedNo" name="assigneedNo"> <label for="inputAssigneedNo"><span class="glyphicon glyphicon-remove"></span></label>
               </div>
             </div>
           </div>
-        {% endif %}
+          {% if page.issues_special_filters %}
+            {% for special_filter in page.issues_special_filters %}
+              <div class="form-group">
+                <label class="col-sm-2 control-label">{{ special_filter[1].name | capitalize }}</label>
+                <div class="col-sm-10">
+                  {% for value in special_filter[1].values %}
+                    <div class="checkbox">
+                      <input type="checkbox" id="input{{ special_filter[1].name | capitalize }}{{ value | camelize }}" name="{{ special_filter[1].name | downcase }}{{ value | camelize }}"> <label for="input{{ special_filter[1].name | capitalize }}{{ value | camelize }}">{{ value }}</label>
+                    </div>
+                  {% endfor %}
+                </div>
+              </div>
+            {% endfor %}
+          {% endif %}
+          {% if page.issues_labels %}
+            <div class="form-group">
+              <label for="inputLabels" class="col-sm-2 control-label">Labels</label>
+              <div class="col-sm-10">
+                <div class="labels">
+                  {% for label in page.issues_labels %}
+                    <span class="label label-tag label-selector" style="background-color: #{{ label.color }};">{{ label.name }}</span>
+                  {% endfor %}
+                </div>
+              </div>
+            </div>
+          {% endif %}
+        </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <button class="btn btn-default issues-search">Search!</button>
@@ -75,7 +97,7 @@
               <h5>
                 <a href="{{ issue.url }}" class="issue-title">{{ issue.title }}</a>
               </h5>
-              <div class="issue" data-author="{{ issue.user_login }}" data-assignee="{{ issue.assignee_login }}">
+              <div class="issue" data-author="{{ issue.user_login }}" data-assignee="{{ issue.assignee_login }}"{% for filter in issue.special_filter_value %} data-{{ filter[0] }}="{{ filter[1].value }}"{% endfor %}>
                 {% if issue.labels %}
                   <div class="tags">
                     {% for label in issue.labels %}
