--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -46,14 +46,25 @@
               </div>
             </div>
           </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">State</label>
+            <div class="col-sm-10">
+              <div class="checkbox">
+                <input type="checkbox" id="inputStateOpen" name="stateOpen"> <label for="inputStateOpen">open</label>
+              </div>
+              <div class="checkbox">
+                <input type="checkbox" id="inputStateClosed" name="stateClosed"> <label for="inputStateClosed">closed</label>
+              </div>
+            </div>
+          </div>
           {% if page.issues_special_filters %}
             {% for special_filter in page.issues_special_filters %}
-              <div class="form-group">
+              <div class="form-group issue-special-filter">
                 <label class="col-sm-2 control-label">{{ special_filter[1].name | capitalize }}</label>
                 <div class="col-sm-10">
                   {% for value in special_filter[1].values %}
                     <div class="checkbox">
-                      <input type="checkbox" id="input{{ special_filter[1].name | capitalize }}{{ value | camelize }}" name="{{ special_filter[1].name | downcase }}{{ value | camelize }}"> <label for="input{{ special_filter[1].name | capitalize }}{{ value | camelize }}">{{ value }}</label>
+                      <input type="checkbox" data-special-filter-type="{{ special_filter[0] }}" data-special-filter-value="{{ value }}" id="input{{ special_filter[1].name | capitalize }}{{ value | camelize }}" name="{{ special_filter[1].name | downcase }}{{ value | camelize }}"> <label for="input{{ special_filter[1].name | capitalize }}{{ value | camelize }}">{{ value }}</label>
                     </div>
                   {% endfor %}
                 </div>
@@ -97,7 +108,7 @@
               <h5>
                 <a href="{{ issue.url }}" class="issue-title">{{ issue.title }}</a>
               </h5>
-              <div class="issue" data-author="{{ issue.user_login }}" data-assignee="{{ issue.assignee_login }}"{% for filter in issue.special_filter_value %} data-{{ filter[0] }}="{{ filter[1].value | join: ';' }}"{% endfor %}>
+              <div class="issue" data-milestone="{{ issue.milestone_number }}" data-state="{{ issue.state }}" data-author="{{ issue.user_login }}" data-assignee="{{ issue.assignee_login }}"{% for filter in issue.special_filter_value %} data-{{ filter[0] }}="{{ filter[1].value | join: ';' }}"{% endfor %}>
                 {% if issue.labels %}
                   <div class="tags">
                     {% for label in issue.labels %}
@@ -133,6 +144,9 @@
               </div>
               <small class="description">
                 #{{ issue.number }} • {{ issue.state }} • {{ issue.date | date: "%b %-d, %Y" }} • {{ issue.user_login }}
+                {% if issue.milestone_number %}
+                 • Milestone: <span data-toggle="tooltip" data-original-title="State: {{ issue.milestone_state }} / Title: {{ issue.milestone_title }}">#{{ issue.milestone_number }}</span>
+                {% endif %}
                 {% if issue.assignee_login %}
                  • Assignee: <a href="{{ issue.assignee_url }}">{{ issue.assignee_login }}</a>
                 {% endif %}
