--- a/_includes/issues.html
+++ b/_includes/issues.html
@@ -39,10 +39,10 @@
             <label class="col-sm-2 control-label">Assigneed?</label>
             <div class="col-sm-10">
               <div class="checkbox">
-                <input type="checkbox" id="inputAssigneedYes" name="assigneedYes"> <label for="inputAssigneedYes"><span class="glyphicon glyphicon-ok"></span></label>
+                <input type="checkbox" class="radio-checkbox" id="inputAssigneedYes" name="assigneedYes"> <label for="inputAssigneedYes"><span class="glyphicon glyphicon-ok"></span></label>
               </div>
               <div class="checkbox">
-                <input type="checkbox" id="inputAssigneedNo" name="assigneedNo"> <label for="inputAssigneedNo"><span class="glyphicon glyphicon-remove"></span></label>
+                <input type="checkbox" class="radio-checkbox" id="inputAssigneedNo" name="assigneedNo"> <label for="inputAssigneedNo"><span class="glyphicon glyphicon-remove"></span></label>
               </div>
             </div>
           </div>
@@ -50,13 +50,25 @@
             <label class="col-sm-2 control-label">State</label>
             <div class="col-sm-10">
               <div class="checkbox">
-                <input type="checkbox" id="inputStateOpen" name="stateOpen"> <label for="inputStateOpen">open</label>
+                <input type="checkbox" class="radio-checkbox" id="inputStateOpen" name="stateOpen"> <label for="inputStateOpen">open</label>
               </div>
               <div class="checkbox">
-                <input type="checkbox" id="inputStateClosed" name="stateClosed"> <label for="inputStateClosed">closed</label>
+                <input type="checkbox" class="radio-checkbox" id="inputStateClosed" name="stateClosed"> <label for="inputStateClosed">closed</label>
               </div>
             </div>
           </div>
+          {{ if page.issues_milestones }}
+            <div class="form-group issue-milestones-filter">
+              <label class="col-sm-2 control-label">Milestone</label>
+              <div class="col-sm-10">
+                {% for milestone in page.issues_milestones %}
+                  <div class="checkbox">
+                    <input type="checkbox" class="radio-checkbox issue-milestone" id="inputMilestone{{ milestone.id }}" data-milestone-id="{{ milestone.id }}"> <label for="inputMilestone{{ milestone.id }}"><span data-toggle="tooltip" data-original-title="{{ milestone.description }}{% if milestone.due_on %} \ Due on: {{ milestone.due_on | date: '%b %-d, %Y' }}{% endif %}">#{{ milestone.number }}: {{ milestone.title }}</span></label>
+                  </div>
+                {% endfor %}
+              </div>
+            </div>
+          {{ endif }}
           {% if page.issues_special_filters %}
             {% for special_filter in page.issues_special_filters %}
               <div class="form-group issue-special-filter">
@@ -108,7 +120,7 @@
               <h5>
                 <a href="{{ issue.url }}" class="issue-title">{{ issue.title }}</a>
               </h5>
-              <div class="issue" data-milestone="{{ issue.milestone_number }}" data-state="{{ issue.state }}" data-author="{{ issue.user_login }}" data-assignee="{{ issue.assignee_login }}"{% for filter in issue.special_filter_value %} data-{{ filter[0] }}="{{ filter[1].value | join: ';' }}"{% endfor %}>
+              <div class="issue" data-milestone-id="{{ issue.milestone_id }}" data-state="{{ issue.state }}" data-author="{{ issue.user_login }}" data-assignee="{{ issue.assignee_login }}"{% for filter in issue.special_filter_value %} data-{{ filter[0] }}="{{ filter[1].value | join: ';' }}"{% endfor %}>
                 {% if issue.labels %}
                   <div class="labels">
                     {% for label in issue.labels %}
@@ -119,7 +131,7 @@
                 <div class="issue-content issue-body">
                   <h4>Issue body</h4>
                   <div>
-                    {{ issue.body | markdownify }}
+                    {{ issue.body | markdownify_gfm }}
                   </div>
                   <h4>Issue details</h4>
                   <div class="issue-details">
@@ -143,7 +155,7 @@
               <small class="description">
                 #{{ issue.number }} • {{ issue.state }} • {{ issue.date | date: "%b %-d, %Y" }} • {{ issue.user_login }}
                 {% if issue.milestone_number %}
-                 • Milestone: <span data-toggle="tooltip" data-original-title="State: {{ issue.milestone_state }} / Title: {{ issue.milestone_title }}">#{{ issue.milestone_number }}</span>
+                 • Milestone: <span data-toggle="tooltip" data-original-title="{{ issue.milestone_state }} / {{ issue.milestone_title }}{% if issue.milestone_due_on %} \ Due on: {{ issue.milestone_due_on | date: '%b %-d, %Y' }}{% endif %}">#{{ issue.milestone_number }}</span>
                 {% endif %}
                 {% if issue.assignee_login %}
                  • Assignee: <a href="{{ issue.assignee_url }}">{{ issue.assignee_login }}</a>
