--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,12 @@
       <div class="box">
         <div class="row">
           {% include sidebar.html %}
-          <div class="column col-sm-9 col-md-9 col-lg-10" id="main">
+          <div class="column col-sm-9 col-md-9 col-lg-10{% if page.loader %} loading{% endif %}" id="main">
             <div class="padding">
               {{ content }}
+            </div>
+            <div class="loader">
+              <div class="loader-indicator"></div>
             </div>
           </div>
         </div>
