--- a/css/styles.css
+++ b/css/styles.css
@@ -351,3 +351,59 @@ padding-bottom: 0;
 .tt-suggestion p {
     margin: 0;
 }
+
+/* LOADER */
+
+.loading .padding {
+  visibility: hidden;
+  overflow: hidden;
+}
+
+.loading .loader {
+  display: block;
+}
+
+.loader {
+  background: #ebebeb;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.loader .loader-indicator{
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -75px;
+  margin-top: -75px;
+  border-width: 25px;
+  border-style: solid;
+  border-color: #024c7d transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-animation: spin 650ms linear infinite;
+  -moz-animation: spin 650ms linear infinite;
+  animation: spin 650ms linear infinite;
+  display: inline-block;
+}
+
+@media (max-width: 768px) {
+  .loader .loader-indicator{
+    top: 100px;
+  }
+}
